# qb64

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING.txt  README for Linux and OS X.txt  README.md  SAMPLES.txt  Windows Console Test.bas  appveyor.yml  autosync.sh  qb64.1  qb64.bas  qb64.desktop  qb64_start_macos.command  qb64_start_osx.command  setup_devbuild.bat  setup_lnx.sh  setup_macos.command  setup_osx.command  setup_win.bat  setup_win_x86.bat  virtual_keyboard_layout_default.txt
.ci/: boostrap.sh  bootstrap.bat  bootstrap.sh  build.bat  common-exclusion.list  compile.bat  compile.sh  deploy.bat  deploy.ps1  deploy.sh  lnx-exclusion.list  update-source.sh  win-exclusion.list
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  run.yml
.travis/: appveyor-deploy.ps1  appveyor-qb64.org_rsa.enc  appveyor.bat  build-osx.sh  build.sh  common-exclusion.list  deploy.sh  deploy_rsa.enc  lnx-exclusion.list  osx-exclusion.list  push.sh  travis-qb64.org_rsa.enc  win-exclusion.list
LICENSE/: COPYING.TXT  license_lodepng.txt  license_nanojpeg.txt  license_opus.txt  license_stbvorbis.txt
internal/: ASCII-Picker.bas  clean.bat
internal/MathEval/: A!.txt  B!.txt
internal/c/: common.cpp  common.h  libqb.cpp  libqb.h  libqb.mm  makedat_lnx32.txt  makedat_lnx64.txt  makedat_win.txt  makedat_win64.txt  makeline_lnx.txt  makeline_lnx_nogui.txt  makeline_macos.txt  makeline_osx.txt  makeline_win.txt  msbin.c  mtri1.cpp  mtri1s.cpp  mtri1t.cpp  mtri1ts.cpp  mtri2.cpp  mtri2s.cpp  mtri2t.cpp  mtri2ts.cpp  mtri3.cpp  mtri3s.cpp  mtri3t.cpp  mtri3ts.cpp  mtri4.cpp  mtri4s.cpp  mtri4t.cpp  mtri4ts.cpp  myip.cpp  os.h  purge_all_precompiled_content.bat  purge_all_precompiled_content.command  purge_all_precompiled_content.sh  purge_all_precompiled_content_lnx.sh  purge_all_precompiled_content_osx.command  purge_all_precompiled_content_win.bat  purge_libqb_only.bat  (+5 more)
internal/c/User Mods/: Steves_Main-List.cpp  Users Routines-List.cpp  luke_mods.cpp  luke_mods.h  steve_mods.h  user_list.h
internal/c/c_compiler/: INSTALL_MINGW_HERE.txt
internal/c/libqb/: gui.cpp  gui.h  printer.cpp  printer.h
internal/c/mingw32/: build-info.txt
internal/c/mingw64/: build-info.txt
internal/c/parts/audio/conversion/download/opus-tools-0.1.9/: ChangeLog  Makefile.am  Makefile.in  Makefile.unix  README  aclocal.m4  config.h.in  configure  configure.ac  opus-tools.sln  package_version
internal/c/parts/audio/conversion/download/opus-tools-0.1.9/m4/: pkg.m4
internal/c/parts/audio/conversion/download/opus-tools-0.1.9/man/: opusdec.1  opusenc.1  opusinfo.1  opusrtp.1
internal/c/parts/audio/conversion/download/opus-tools-0.1.9/src/: audio-in.c  diag_range.c  info_opus.c  info_opus.h  opusdec.c  opusdec.vcxproj  opusdec.vcxproj.filters  opusenc.c  opusenc.h  opusenc.vcxproj  opusenc.vcxproj.filters  opusinfo.c  opusinfo.h  opusinfo.vcxproj  opusinfo.vcxproj.filters  opusrtp.c  wav_io.c  wav_io.h  wave_out.c  wave_out.h
internal/c/parts/audio/conversion/download/opus-tools-0.1.9/win32/: config.h  genversion.bat  unicode_support.c  unicode_support.h  version.h
internal/help/: $ASSERTS.txt  $CHECKING.txt  $COLOR.txt  $CONSOLE.txt  $DEBUG.txt  $DYNAMIC.txt  $ELSE.txt  $ELSEIF.txt  $END_IF.txt  $ERROR.txt  $EXEICON.txt  $IF.txt  $INCLUDE.txt  $LET.txt  $NOPREFIX.txt  $RESIZE.txt  $SCREENHIDE.txt  $SCREENSHOW.txt  $STATIC.txt  $VERSIONINFO.txt  $VIRTUALKEYBOARD.txt  %26B.txt  %26H.txt  %26O.txt  %2F.txt  -.txt  .txt  ABS.txt  ACCESS.txt  ALIAS.txt  AND.txt  AND_(boolean).txt  ANY.txt  APPEND.txt  AS.txt  ASC.txt  ASCII.txt  ASC_(statement).txt  ATN.txt  Apostrophe.txt  (+576 more)
internal/source/: Steve Mods.txt  User List.txt  call_windres.bat  clear.txt  data1.txt  data10.txt  data100.txt  data101.txt  data102.txt  data103.txt  data104.txt  data105.txt  data106.txt  data107.txt  data108.txt  data109.txt  data11.txt  data110.txt  data111.txt  data112.txt  data113.txt  data114.txt  data115.txt  data116.txt  data117.txt  data118.txt  data119.txt  data12.txt  data120.txt  data121.txt  data122.txt  data123.txt  data124.txt  data125.txt  data126.txt  data127.txt  data128.txt  data129.txt  data13.txt  data130.txt  (+563 more)
internal/source/User Mods/: Steve Stuff-ID_Includes.bi  User Mod List.bi
internal/support/: auto-term.sh
internal/support/color/: color0.bi  color0_noprefix.bi  color32.bi  color32_noprefix.bi
internal/support/sh/: console.sh
internal/support/vwatch/: vwatch.bi  vwatch.bm  vwatch_stub.bm
internal/temp/: testcommit.txt
licenses/: COPYING.TXT  license_zlib.txt
programs/android/: make_android.bat
programs/android/eclipse_template/: .project
programs/android/project_template/: AndroidManifest.xml
programs/android/template/: located_files.txt  notes.txt
programs/samples/misc/: 3dballs.bas  3dexp2.bas  acalc.bas  aklabeth.bas  ascipong.bas  audio.bas  boom1.raw  cabsmous.bas  carols.bas  chess.bas  cuberot.bas  djsok.bas  evil1.raw  flrmp.bas  forest.bas  frac1.bas  frac2.bas  frac3.bas  frog.bas  gor64.bas  gujero.bas  intrprtr.bas  kite.bas  land1.raw  lissaj.bas  mandala.bas  mandelb.bas  matrix.bas  mclock.bas  message.bas  mzupd2.bas  nib64.bas  pattern.bas  ps2battl.mid  rc-ent6.bas  replicat.bas  ripples.bas  rot13.bas  rotozoom.bas  samples.txt  (+14 more)
programs/samples/open_gl/: 3d_model_viewer.bas  gasprin.x  marty.x  piggy_mini3.x  simple_example.bas
programs/samples/pete/: alyman.bas  asciiconversion.bas  (+40 more)
source/: icon.rc  qb64.bas
source/android/: android_global.bas  android_methods.bas
source/embed/: footer_stub.bas  header_stub.bas
source/global/: IDEsettings.bas  constants.bas  settings.bas  version.bas
source/ide/: ide_global.bas  ide_methods.bas
source/qb_framework/: qb_framework_global.bas  qb_framework_methods.bas
source/subs_functions/: subs_functions.bas  syntax_highlighter_list.bas
source/utilities/: QB45BIN.bas  strings.bas  vwatch.bi  vwatch.bm  vwatch_stub.bm
source/virtual_keyboard/: virtual_keyboard_global.bas  virtual_keyboard_keycodes.bas  virtual_keyboard_keypush.bas  virtual_keyboard_methods.bas
(+3017 files in other folders)
